--- a/PO_INVOICE/basic-network-channel-base-event/docker-compose.yml
+++ b/PO_INVOICE/basic-network-channel-base-event/docker-compose.yml
@@ -79,8 +79,8 @@ services:
     container_name: orderer.example.com
     image: hyperledger/fabric-orderer
     environment:
-      - ORDERER_OPERATIONS_LISTENADDRESS=0.0.0.0:9443 
-      - ORDERER_METRICS_PROVIDER=prometheus 
+      - ORDERER_OPERATIONS_LISTENADDRESS=0.0.0.0:9443  #edit by rush fot prometheus
+      - ORDERER_METRICS_PROVIDER=prometheus #edit by rush fot prometheus
       - FABRIC_LOGGING_SPEC=info
       - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
       - ORDERER_GENERAL_GENESISMETHOD=file
@@ -90,7 +90,7 @@ services:
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/orderer
     command: orderer
     ports:
-      - 6443:9443 
+      - 6443:9443  #edit by rush fot prometheus
       - 7050:7050
     volumes:
         - ./config/:/etc/hyperledger/configtx
@@ -103,8 +103,8 @@ services:
     container_name: peer0.org1.example.com
     image: hyperledger/fabric-peer
     environment:
-      - CORE_OPERATIONS_LISTENADDRESS=peer0.org1.example.com:9443
-      - CORE_METRICS_PROVIDER=prometheus 
+      - CORE_OPERATIONS_LISTENADDRESS=peer0.org1.example.com:9443 #edit by rush fot prometheus
+      - CORE_METRICS_PROVIDER=prometheus #edit by rush fot prometheus
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       - CORE_PEER_ID=peer0.org1.example.com
       - FABRIC_LOGGING_SPEC=info
@@ -129,7 +129,7 @@ services:
     command: peer node start
     # command: peer node start --peer-chaincodedev=true
     ports:
-      - 7443:9443 
+      - 7443:9443 #edit by rush fot prometheus
       - 7051:7051
       - 7053:7053
     volumes:
@@ -188,8 +188,8 @@ services:
     container_name: peer0.org2.example.com
     image: hyperledger/fabric-peer
     environment:
-      - CORE_OPERATIONS_LISTENADDRESS=peer0.org2.example.com:9443
-      - CORE_METRICS_PROVIDER=prometheus 
+      - CORE_OPERATIONS_LISTENADDRESS=peer0.org2.example.com:9443 #edit by rush fot prometheus
+      - CORE_METRICS_PROVIDER=prometheus #edit by rush fot prometheus
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       - CORE_PEER_ID=peer0.org2.example.com
       - FABRIC_LOGGING_SPEC=info
@@ -214,7 +214,7 @@ services:
     command: peer node start
     # command: peer node start --peer-chaincodedev=true
     ports:
-      - 8443:9443 
+      - 8443:9443 #edit by rush fot prometheus
       - 8051:7051
       - 8053:7053
     volumes:
@@ -270,11 +270,11 @@ services:
       - basic
 
   peer0.org3.example.com:
-    container_name: peer0.org3.example.com
+    container_name: peer0.org3.example.com 
     image: hyperledger/fabric-peer
     environment:
-      - CORE_OPERATIONS_LISTENADDRESS=peer0.org3.example.com:9443
-      - CORE_METRICS_PROVIDER=prometheus 
+      - CORE_OPERATIONS_LISTENADDRESS=peer0.org3.example.com:9443 #edit by rush fot prometheus
+      - CORE_METRICS_PROVIDER=prometheus #edit by rush fot prometheus
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       - CORE_PEER_ID=peer0.org3.example.com
       - FABRIC_LOGGING_SPEC=info
@@ -299,7 +299,7 @@ services:
     command: peer node start
     # command: peer node start --peer-chaincodedev=true
     ports:
-      - 9443:9443 
+      - 9443:9443 #edit by rush fot prometheus
       - 9051:7051
       - 9053:7053
     volumes:
@@ -317,8 +317,8 @@ services:
     container_name: peer0.org4.example.com
     image: hyperledger/fabric-peer
     environment:
-      - CORE_OPERATIONS_LISTENADDRESS=peer0.org4.example.com:9443
-      - CORE_METRICS_PROVIDER=prometheus     
+      - CORE_OPERATIONS_LISTENADDRESS=peer0.org4.example.com:9443 #edit by rush fot prometheus
+      - CORE_METRICS_PROVIDER=prometheus     #edit by rush fot prometheus
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       - CORE_PEER_ID=peer0.org4.example.com
       - FABRIC_LOGGING_SPEC=info
@@ -343,7 +343,7 @@ services:
     command: peer node start
     # command: peer node start --peer-chaincodedev=true
     ports:
-      - 10443:9443     
+      - 10443:9443     #edit by rush fot prometheus
       - 10051:7051
       - 10053:7053
     volumes:
